MacOS development support

--- a/NetRPG/Language/RPG.txt
+++ b/NetRPG/Language/RPG.txt
@@ -1,4 +1,4 @@
-﻿OPERATORS: ".", "(", ")", ";", ":", "=", "+", "-", "/", "*"
+﻿OPERATORS: ".", "(", ")", ";", ":", "=", "+", "/", "*"
 STRING_LITERAL: '\''
 
 BLOCK_OPEN: "("
