--- a/NetRPG/Language/RPG.txt
+++ b/NetRPG/Language/RPG.txt
@@ -1,9 +1,9 @@
-﻿OPERATORS: ".", "(", ")", ";", ":", "=", "+", "/", "*"
+﻿OPERATORS: ".", "(", ")", ";", ":", "=", "+", "/", "*", "-"
 STRING_LITERAL: '\''
 
 BLOCK_OPEN: "("
 BLOCK_CLOSE: ")"
-DCL: "DCL-F", "DCL-S", "DCL-C", "DCL-DS", "DCL-PROC", "DCL-PR", "DCL-PI"
+DCL: "DCL"
 OPERATION: "END-PROC", "ACQ", "ADD", "ADDDUR", "ALLOC", "ANDxx", "BEGSR", "BITOFF", "BITON", "CABxx", "CALL", "CALLB", "CALLP", "CASxx", "CAT", "CHAIN", "CHECK", "CHECKR", "CLEAR", "CLOSE", "COMMIT", "COMP", "DEALLOC", "DEFINE", "DELETE", "DIV", "DO", "DOU", "DOUxx", "DOW", "DOWxx", "DSPLY", "DUMP", "ELSE", "ELSEIF", "ENDyy", "ENDSR", "EVAL", "EVALR", "EVAL-CORR", "EXCEPT", "EXFMT", "EXSR", "EXTRCT", "FEOD", "FOR", "FORCE", "GOTO", "IF", "IFxx", "IN", "ITER", "KFLD", "KLIST", "LEAVE", "LEAVESR", "LOOKUP", "MHHZO", "MHLZO", "MLHZO", "MLLZO", "MONITOR", "MOVE", "MOVEA", "MOVEL", "MULT", "MVR", "NEXT", "OCCUR", "ON-ERROR", "ON-EXIT", "OPEN", "ORxx", "OTHER", "OUT", "PARM", "PLIST", "POST", "READ", "READC", "READE", "READP", "READPE", "REALLOC", "REL", "RESET", "RETURN", "ROLBK", "SCAN", "SELECT", "SETGT", "SETLL", "SETOFF", "SETON", "SHTDN", "SORTA", "SQRT", "SUB", "SUBDUR", "SUBST", "TAG", "TEST", "TESTB", "TESTN", "TESTZ", "TIME", "UNLOCK", "UPDATE", "WHEN", "WHENxx", "WRITE", "XFOOT", "XLATE", "XML-INTO", "XML-SAX", "Z-ADD", "Z-SUB"
 BIF: "/\\%\\S*/"
 SPECIAL: "/\\*\\S*/"
